<resources>
    <string name="app_name">Parking Reservation</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>


    <string name="title_screen">Parking Reservation</string>
    <string name="title_activity_login">¿Ya Tienes Cuenta?</string>
    <string name="title_registro">Ingresa tus datos</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOG IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="tviSinCuenta">¿No tienes cuenta?</string>
    <string name="textRegistrate">REGISTATE CON TU E-MAIL</string>
    <string name="title_activity_register">Registrarse</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_parking_view">Mis Reservas</string>
    <string name="action_reservation">Mis Reservas</string>
    <string name="action_mydata">Mis Reservas</string>
    <string name="action_takeaphoto">Mis Reservas</string>
    <string name="action_logout">Mis Reservas</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="label_parking">Empresa:</string>
    <string name="label_address">Dirección:</string>
    <string name="label_rate">Precio/Hora:</string>
    <string name="label_status">Estado:</string>
    <string name="label_openTime">Inicio:</string>
    <string name="label_closeTime">Fin:</string>
    <string name="label_phone">Teléfono:</string>
    <string name="label_totalPrice">Total:</string>

    <string name="title_register">Registrar</string>
    <string name="title_activity_reservation">My Reservation</string>
    <string name="menuParkigLots">List Parking Lot</string>
    <string name="menuSearchParking">Search Parking</string>
    <string name="menuTools">Tools</string>
    <string name="menuLogout">Logout</string>
    <string name="title_activity_add_parking_lot">Add ParkingLot</string>

</resources>
