<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pe.edu.upc.appparkingreservation.MainActivity">
    <item
        android:id="@+id/action_users"
        android:orderInCategory="100"
        android:title="@string/action_reservation"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_mydata"
        android:orderInCategory="100"
        android:title="@string/action_mydata"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_takeaphoto"
        android:orderInCategory="100"
        android:title="@string/action_takeaphoto"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

</menu>