<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:background="@color/colorDarkBack"
    tools:context="pe.edu.upc.appparkingreservation.activity.LoginActivity">

    <include layout="@layout/content_main" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_car"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:layout_below="@+id/login_progress"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="@android:color/white"
        android:text="@string/title_activity_login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_edittextddd"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/colorForeWhite"
        android:inputType="text"
        android:nextFocusDown="@+id/password"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/email"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittextddd"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/prompt_password"
    android:textColorHint="@color/colorForeWhite"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorGrey"
        android:text="@string/action_sign_in"/>

    <TextView
        android:id="@+id/tviNoTienesCuenta"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/tviSinCuenta"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_above="@+id/butRegistrate"
        android:layout_marginBottom="10dp"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/butRegistrate"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorGreen"
        android:text="@string/textRegistrate"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/parkingView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="410dp"
        android:background="@color/colorGreen"
        android:text="@string/title_parking_view"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
