<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menuMyReservation" />
        <item
            android:id="@+id/nav_parkingfind"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menuSearchParking" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_setting_light"
            android:title="@string/menuTools" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_car"
            android:title="@string/menuLogout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
